fixat med spacing i olika layout

--- a/src/main.scss
+++ b/src/main.scss
@@ -29,6 +29,13 @@ h1{
   margin-left: 15px;
 }
 
+.rectangle1{
+  background-color: #D9D9D9;
+  width: 16px;
+  height: 16px;
+  margin-left: 15px;
+}
+
 .rectangle2{
   background-color: #D9D9D9;
   width: 16px;
@@ -103,6 +110,9 @@ a{
   line-height: 39.6px;
   margin-top: 0;
   margin-bottom: 0;
+  margin-right: 0;
+  border: 2px solid green;
+
 }
 
 .empText{
@@ -125,6 +135,7 @@ a{
   font-weight: 350;
   margin-bottom: 0;
   margin-top: 0;
+  border: 2px solid red;
 }
 
 .buttonDesktop {
@@ -145,6 +156,7 @@ a{
   font-weight: 350;
   margin-bottom: 0;
   margin-top: 0;
+  border: 2px solid yellow;
 }
 
 .imgMobile{
@@ -162,6 +174,7 @@ a{
   line-height: 19.2px;
   font-weight: 350;
   margin-top: 0;
+  border: 2px solid blue;
 }
 
 footer{
@@ -187,22 +200,60 @@ footer{
 
 .imgTablet{
   display: block;
-  right: 5rem;
-  top: 3px;
+  left: 7rem;
+  top: -48px;
   position: relative;
 }
 
+.rectangleFlex{
+  display: flex;
+}
+
+.rectangle1{
+  margin-left: 137px;
+}
+
+.rectangleParrot{
+  background-color: #d9d9d9;
+  width: 16px;
+  height: 16px;
+  margin-left: 400px;
+}
+
+.rectangle2{
+  position: relative;
+  left: 26.5rem;
+  margin: 0;
+  top: -2rem;
+}
+
+.rectangleTablet{
+  background-color: #d9d9d9;
+  width: 16px;
+  height: 16px;
+  position: relative;
+  left: 26.5rem;
+  margin: 0;
+  top: -2rem;
+}
+
+.rectangle3{
+  position: relative;
+  left: 276px;
+}
 
 .container2{
   width: 288px;
   height: 135px;
-  margin-left: 427px;
+  margin-left: 424px;
+  margin-top: -30px;
 }
 
 .container3{
   width: 288px;
   height: 155px;
   margin-left: 119px;
+  margin-top: -35px;
 }
 
 .imgMobile{
@@ -228,7 +279,7 @@ footer{
   }
   .container1{
     width: 418px;
-    height: 430px;
+    height: 228px;
     margin-left: 145px;
     font-size: 48px;
     line-height: 57.6px;
@@ -238,15 +289,20 @@ footer{
     display: none;
   }
 
+  .textImg{
+    height: 25vh;
+  }
+
   .imgDesktop {
     display: block;
     position: relative;
-    left: 16vw;
-    top: -137px;
+    left: 27vw;
+    top: -169px;
   }
 
-  .rowDesktop{
+  .rowDesktop{;
     display: flex;
+    height: 20vh;
   }
   
   .container2{
@@ -254,6 +310,47 @@ footer{
     height: 135px;
     margin-left: 141px;
     margin-top: 0;
+  }
+
+  .rectangleParrot{
+    display:none;
+  }
+
+  .rectangle2{
+    display: none;
+  }
+
+  .rectangleTablet{
+    left: 9rem;
+    top: -7rem;
+  }
+
+  .rectangle3{
+    display: none;
+  }
+
+  .single{
+    display: block;
+    top: 152px;
+    left: 95px;
+  }
+
+  .lineText{
+    width: 230px;
+    background-color: #b30044;
+    position: relative;
+    top: 168px;
+    right: 175px;
+    height: 10px;
+  }
+
+  .line{
+    width: 120px;
+    height: 1px;
+    transform: rotate(90deg);
+    position: relative;
+    left: 254px;
+    top: -40px;
   }
 
   .buttonDesktop {
@@ -313,6 +410,16 @@ footer{
     line-height: 19.2px;
     font-size: 16px;
     text-transform: uppercase;
+    margin: 0;
+  }
+
+  .rectangle4{
+    width: 16px;
+    height: 16px;
+    background-color:#d9d9d9;
+    top: 30px;
+    position: relative;
+    left: 117px;
   }
 
   input{
@@ -321,7 +428,7 @@ footer{
     border-radius: 20px;
     width: 200px;
     height: 20px;
-    top: 1rem;
+    top: 2rem;
   }
 
   .sign{
@@ -333,13 +440,22 @@ footer{
     position: relative;
     border-radius: 15px;
     font-weight: 700;
-    top: 1rem;
+    top: 2rem;
     text-transform: uppercase;
   }
 
   .sign:hover{
     color: white;
     background-color: green;
+  }
+  
+  .rectangleFooter{
+    width: 16px;
+    height: 16px;
+    background-color:#d9d9d9;
+    position: relative;
+    top: 29px;
+    left: 114px;
   }
 
 }
